将本地图片更新为知乎图床

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -264,30 +264,30 @@ While thinking in this way is tempting, it’s a mistake. In fact, cards are fun
 
 A helpful comparison is to the sentence in written prose. For the beginning writer it’s tempting to treat sentences casually. But in the hands of a great writer – say, a Nabokov – sentences can be developed into a virtuoso artform. What would it take to achieve virtuoso skill in writing the cards of the mnemonic medium?
 
-一个有用的比较是书面散文中的句子。对于初学写作的人来说，句子很容易被轻视。但是在一个伟大的作家手中--比如说，纳博科夫--句子可以发展成一种精湛的艺术形式。怎样才能获得编写卡片的高超技巧？
+一个有用的类比是书面散文中的句子。对于初学写作的人来说，句子很容易被轻视。但是在一个伟大的作家手中--比如说，纳博科夫--句子可以发展成一种精湛的艺术形式。怎样才能获得编写卡片的高超技巧？
 
 It’s not obvious *a priori* that writing cards is such a rich activity. One of us wrote 17,000- and 6,000-word essays[^14] whose subject was in large part understanding how to write good cards. He didn’t realize that was going to be the subject when he began writing; it only became clear in retrospect how rich card writing is. It turns out that answering the question “how to write good cards?” requires thinking hard about your theory of knowledge and how to represent it, and your theory of learning. The better those theories, the better your cards will be. Small wonder it’s a rich, open-ended problem!
 
-*先前*他们很难想象做卡片有那么多门道。我们其中一人写了 17000 字和 6000 字的文章，其主题在很大程度上是了解如何编写好卡片。他在开始写作时并没有意识到这将是他的主题；只是在回想时才明白，编写卡片的内容是多么丰富。事实证明，回答 "如何编写好卡片 "这个问题需要认真思考你的知识理论，如何表示它，以及你的学习理论。这些理论越好，你的卡片就越好。难怪这是一个丰富的、开放的问题！
+*先前*他们很难想象做卡片有那么多门道。我们其中一人写了 17000 字和 6000 字的文章[^14] ，其主题在很大程度上是了解如何编写好卡片。他在开始写作时并没有意识到这将是他的主题；只是在回想时才明白，编写卡片的内容是多么丰富。事实证明，回答 "如何编写好卡片 "这个问题需要认真思考你的知识理论，如何表示它，以及你的学习理论。这些理论越好，你的卡片就越好。难怪这是一个丰富的、开放的问题！
 
 All that said, let’s make a few concrete observations about good card-writing. While the specific examples that follow are relatively banal, they should give you some feeling for the profound issues that arise in improving the mnemonic medium. We’ll begin with three principles we used when writing the cards in *Quantum Country*. Note that these are just three of many more principles – a more detailed discussion of good principles of card construction may be found in [Augmenting Long-term Memory](http://augmentingcognition.com/ltm.html).
 
-说了这么多，让我们对好卡片的编写做一些具体的观察。虽然下面的具体例子比较平淡，但它们应该能让你对改进记忆媒介时出现的深刻问题有一些感觉。我们将从我们在《量子国度》中编写卡片时使用的三个原则开始。请注意，这只是许多原则中的三个--关于构建卡片的良好原则的细节讨论可以在[增强长期记忆](http://augmentingcognition.com/ltm.html)中找到。
+说了这么多，让我们对好卡片的编写做一些具体的观察。虽然下面的具体例子比较平淡，但它们应该能让你对改进记忆媒介时出现的深刻问题有一些感觉。我们将从我们在《量子国度》中编写卡片时使用的三个原则开始。请注意，这只是许多原则中的三个——关于构建卡片的良好原则的细节讨论可以在[增强长期记忆](http://augmentingcognition.com/ltm.html)中找到。
 
 - **Most questions and answers should be atomic:** Early in his own personal memory practice, one of us was learning the Unix command to create links in the filesystem. He entered the following question into his memory system: “How to create a soft link from linkname to filename”. Together with the corresponding answer “ln -s filename linkname”. This looks like a good question, but he routinely forgot the answer. To address this, he refactored the card into two more atomic cards. One card: “What’s the basic command and option to create a soft link?” (A: “ln -s”). Second card: “When creating a soft link, in what order do linkname and filename go?” (A: “filename linkname”). Breaking the card into more atomic pieces turned a question he routinely got wrong into two questions he routinely got right. It seemed that the more atomic questions brought more sharply into focus what he was forgetting, and so provided a better tool for improving memory. And what of the original card? Initially, he deleted it. But he eventually added the card back, with the same question and answer, since it served to integrate the understanding in the more atomic cards.
-- **大多数问题和答案应该是原子性的：** 在个人记忆实践早期，我们中有人正在学习 Unix 命令，为了在文件系统中创建链接。他在他的记忆系统中输入了以下问题："如何创建一个从链接名到文件名的软链接？"连同相应的答案 "ln -s filename linkname"。这看起来是个好问题，但他经常会忘记答案。为了解决这个问题，他把这张卡片重构为两张更加原子化的卡片。第一张卡片："创建一个软链接的基本命令和选项是什么？" (答："ln -s")。第二张卡片："当创建一个软链接时，linkname和filename按什么顺序排列？" (答："filename linkname")。把卡片分成更多的原子卡片，把一个他经常做错的问题变成了两个他经常做对的问题。看来，更多的原子问题使他更清楚地认识到他所忘记的东西，因此提供了一个更好的工具来改善记忆。那么原来的卡片呢？起初，他把它删除了。但他最终又把这张卡片加了回去，问题和答案都是一样的，因为这张卡有助于整合更多原子卡片中的理解。
+- **大多数问题和答案应该是原子性的：** 在个人记忆实践早期，我们中有人正在学习 Unix 命令，为了在文件系统中创建链接。他在他的记忆系统中输入了以下问题："如何创建一个从链接名到文件名的软链接？"连同相应的答案 "ln -s filename linkname"。这看起来是个好问题，但他经常会忘记答案。为了解决这个问题，他把这张卡片重构为两张更加原子化的卡片。第一张卡片："创建一个软链接的基本命令和选项是什么？" (答："ln -s")。第二张卡片："当创建一个软链接时，linkname 和 filename 按什么顺序排列？" (答："filename linkname")。把卡片分成更多的原子卡片，把一个他经常做错的问题变成了两个他经常做对的问题。看来，更多的原子问题使他更清楚地认识到他所忘记的东西，因此提供了一个更好的工具来改善记忆。那么原来的卡片呢？起初，他把它删除了。但他最终又把这张卡片加了回去，问题和答案都是一样的，因为这张卡有助于整合更多原子卡片中的理解。
 - **Make sure the early questions in a mnemonic essay are trivial: it helps many users realize they aren’t paying enough attention as they read:[^15]** This was a discovery made when we released the first *Quantum Country* essay. Anticipating that users would be struggling with a new interface, we deliberately made the first few questions in the essay utterly trivial – sort of a quantum equivalent to “2+2 = ?” – so they could focus on the interface. To our surprise, users performed poorly on these questions, worse than they did on the (much harder) later questions. Our current hypothesis to explain this is that when users failed to answer the first few questions correctly it served as a wakeup call. The questions were so transparently simple that they realized they hadn’t really been paying attention as they read, and so were subsequently more careful.
-- **确保助记文章中的前几个问题是琐碎的：这有助于许多用户在阅读时意识到他们没有足够的注意力：** 这是我们发布第一篇*量子国度*论文时的发现。预计用户会在新的界面上挣扎，我们故意把文章中的前几个问题弄得非常琐碎--有点像 "2+2=？"的量子化。- 这样他们就可以把注意力放在界面上。令我们惊讶的是，用户在这些问题上的表现很差，比他们在后面的问题(更难)上的表现还要差。我们目前的假设是，当用户未能正确回答前几个问题时，这就像一个警钟。这些问题是如此的简单，以至于他们意识到他们在阅读时并没有真正注意到，所以后来就更加小心了。
+- **确保助记文章中的前几个问题是琐碎的：这有助于许多用户在阅读时意识到他们没有足够的注意力：[^15]** 这是我们发布第一篇*量子国度*论文时的发现。预计用户会在新的界面上挣扎，我们故意把文章中的前几个问题弄得非常琐碎--有点像 "2+2=？"的量子化。- 这样他们就可以把注意力放在界面上。令我们惊讶的是，用户在这些问题上的表现很差，比他们在后面的问题(更难)上的表现还要差。我们目前的假设是，当用户未能正确回答前几个问题时，这就像一个警钟。这些问题是如此的简单，以至于他们意识到他们在阅读时并没有真正注意到，所以后来就更加小心了。
 - **Avoid orphan cards:** These are cards which don’t connect closely to anything else. Suppose, for the sake of illustration, that you’re trying to learn about African geography, and have a question: “What’s the territory in Africa that Morocco disputes?” (A: “The Western Sahara”) If you don’t know anything about the Western Sahara or Morocco or why there’s a dispute, that question will be an orphan, disconnected from everything else. Ideally, you’ll have a densely interconnected web of questions and answers, everything interwoven in striking ways.
-- **避免使用孤立卡片：** 这些卡片与其他东西没有密切联系。为了说明问题，假设你正在努力学习非洲地理，并有一个问题："摩洛哥在非洲有争议的领土是什么？" 答："西撒哈拉"。如果你对西撒哈拉或摩洛哥一无所知，也不知道为什么会有争端，那么这个问题就会成为一个孤岛，与其他东西脱节。理想情况下，你会有一个由问题和答案组成的密集的相互联系的网络，一切都以惊人的方式交织在一起。
+- **避免使用孤立卡片：** 这些卡片与其他东西没有密切联系。为了说明问题，假设你正在努力学习非洲地理，并有一个问题："摩洛哥在非洲有争议的领土是什么？" (答："西撒哈拉")。如果你对西撒哈拉或摩洛哥一无所知，也不知道为什么会有争端，那么这个问题就会成为一个孤岛，与其他东西脱节。理想情况下，你会有一个由问题和答案组成的密集的相互联系的网络，一切都以惊人的方式交织在一起。
 
 Ultimately, we’d like to distill out a set of useful practical principles and idioms to help write good cards and, more generally, good mnemonic essays. Aspirationally, such a set of principles and idioms would work much like *The Elements of Style* (or some similar book of prose advice), and would help other people learn to write high-quality mnemonic essays.
 
-最终，我们希望能提炼出一套有用的实用原则和成语，以帮助编写出好的卡片，更广泛地说，好的助记文章。从理想的角度看，这样一套原则、习语和*《风格要素》*(或一些类似的散文建议书)的作用很像，并能帮助其他人学会写出高质量的助记文章。
+最终，我们希望能提炼出一套有用的实用原则和习语，以帮助编写出好的卡片，更广泛地说，好的助记文章。从理想的角度看，这样一套原则、习语和*《风格要素》*(或一些类似的散文建议书)的作用很像，并能帮助其他人学会写出高质量的助记文章。
 
 When we first described *Quantum Country* above we explained it using a simple model of spaced repetition: increased consolidation strength for memories leading to increased time intervals between reviews. This is a helpful simple model, but risks creating the misleading impression that it’s all that’s going on in the system. In fact, for the mnemonic medium to work effectively, spaced repetition must be deployed in concert with many other ideas. The three ideas we just described – atomicity of questions and answers, making early questions trivial, avoiding orphan cards – are just three of dozens of important ideas used in the mnemonic medium. We won’t enumerate all those other ideas here – that’s not the purpose of this essay. But we want to emphasize this point, since it’s common for people to have the simplistic model “good memory system = spaced repetition”. That’s false, and an actively unhelpful way of thinking.
 
-当我们在上面第一次描述*量子国度*时，我们用一个简单的间隔重复模型来解释它：记忆的巩固强度增加导致回顾的时间间隔延长。这是一个很有帮助的简单模型，但有可能造成误导性的印象，以为这就是系统中发生的所有事情。事实上，为了使记忆媒介有效地发挥作用，间隔重复必须与其他许多想法共同使用。我们刚才描述的三个想法--问题和答案的原子性、使前几个问题变得琐碎、避免孤立卡片--只是记忆媒介中使用的几十个重要想法中的三个。我们不会在这里列举所有这些其他的想法--这不是这篇文章的目的。但我们想强调这一点，因为人们普遍有一个简单的模式 "好的记忆系统=间隔重复"。这是错误的，而且是一种非常无益的思维方式。
+当我们在上面第一次描述*量子国度*时，我们用一个简单的间隔重复模型来解释它：记忆的巩固强度增加导致复习的时间间隔延长。这是一个很有帮助的简单模型，但有可能造成误导性的印象，以为这就是系统中发生的所有事情。事实上，为了使记忆媒介有效地发挥作用，间隔重复必须与其他许多想法共同使用。我们刚才描述的三个想法——问题和答案的原子性、使前几个问题变得琐碎、避免孤立卡片——只是记忆媒介中使用的几十个重要想法中的三个。我们不会在这里列举所有这些其他的想法——这不是这篇文章的目的。但我们想强调这一点，因为人们普遍有一个简单的模式 "好的记忆系统=间隔重复"。这是错误的，而且是一种非常无益的思维方式。
 
 Indeed, thinking in this way is one reason spaced-repetition memory systems often fail for individuals. We often meet people who say “Oh, I thought spaced repetition sounded great, and I tried Anki [*etc*], but it doesn’t work for me”. Dig down a little, and it turns out the person is using their memory system in a way guaranteed to fail. They’ll be writing terrible questions, or using it to learn a subject they don’t care about, or making some other error. They’re a little like a person who thinks “learning the guitar sounds great”, picks it up for half an hour, and then puts it down, saying that they sound terrible and therefore it’s a bad instrument. Of course, what’s really going on is that the guitar and memory systems are both skills that take time to develop. But, with that said, we want to build as much support as possible into the medium. Ideally, even novices would benefit tremendously from the mnemonic medium. That means building in many ideas that go beyond the simplistic model of spaced repetition.
 
@@ -295,7 +295,7 @@ Indeed, thinking in this way is one reason spaced-repetition memory systems ofte
 
 One of us has previously asserted[^16] that in spaced-repetition memory systems, users need to make their own cards. The reasoning is informal: users often report dissatisfaction and poor results when working with cards made by others. The reason seems to be that making the cards is itself an important act of understanding, and helps with committing material to memory. When users work with cards made by others, they lose those benefits.
 
-我们中的一个人以前曾断言在间隔重复记忆系统中，用户需要自己编写卡片。推理是非正式的：用户经常报告说在使用别人编写的卡片时不满意，效果不好。原因似乎是，编写卡片本身就是一种重要的理解行为，并有助于将材料刻入记忆。当用户使用他人编写的卡片时，他们就失去了这些好处。
+我们中的一个人以前曾断言[^16]在间隔重复记忆系统中，用户需要自己编写卡片。推理是非正式的：用户经常报告说在使用别人编写的卡片时不满意，效果不好。原因似乎是，编写卡片本身就是一种重要的理解行为，并有助于将材料刻入记忆。当用户使用他人编写的卡片时，他们就失去了这些好处。
 
 *Quantum Country* violates this principle, since users are not making the cards. This violation was a major concern when we began working on *Quantum Country*. However, preliminary user feedback suggests it has worked out adequately. A possible explanation is that, as noted above, making good cards is a difficult skill to master, and so what users lose by not making their own cards is made up by using what are likely to be much higher-quality cards than they could have made on their own. In future, it’s worth digging deeper into this issue, both to understand it beyond informal models, and to explore ways of getting the benefits of active card making.
 
@@ -306,11 +306,11 @@ Above we discussed three principles of good question-and-answer construction. Of
 上面我们讨论了好的问答结构的三个原则。当然，也可以对卡片本身的性质进行更多的结构性修改。这里有三个问题，建议在这些方向上进行实验：
 
 - **How can we ensure users don’t just learn surface features of questions?** One question in *Quantum Country* asks: “Who has made progress on using quantum computers to simulate quantum field theory?” with the answer: “John Preskill and his collaborators”. This is the only “Who…?” question in the entire essay, and many users quickly learn to recognize it from just the “Who…?” pattern, and parrot the answer without engaging deeply with the question. This is a common failure mode in memory systems, and it’s deadly to understanding. One response, which we plan to trial soon, is to present the question in multiple different-but-equivalent forms. So the user first sees the question as “Who has made progress [*etc*]?”; but then the second time the question is presented as a fill-in-the-blanks: “___ and his collaborators have made progress on using quantum computers to simulate quantum field theory.” And so on, multiple different forms of the question, designed so the user must always engage deeply with the meaning of the question, not its superficial appearance. Ultimately, we’d like to develop a library of techniques for identifying when this learning-the-surface-feature pattern is occurring, and for remedying it.
-- **我们如何确保用户不只是学习问题的表面特征？**《量子国度》中的一个问题问道："谁在使用量子计算机模拟量子场理论方面取得了进展？"，答案是："John Preskill和他的合作者"。这是整篇文章中唯一一个以"谁"开头的问题，许多用户很快就学会了只从 "谁...... "的模式中识别出来，并鹦鹉学舌地说出了答案，而没有深入参与这个问题。这是记忆系统中一个常见的失败模式，对理解是致命的。我们计划很快进行试验的一个对策是，以多种形式不同但本质相同的表述呈现问题。因此，用户第一次看到的问题是 "谁取得了[*等*]的进展？"；但第二次看到的问题是以填空的方式呈现。"___和他的合作者在使用量子计算机模拟量子场理论方面取得了进展。" 以此类推，问题的多种不同形式，旨在让用户必须始终深入参与问题的含义，而不是其表面的外观。最终，我们希望开发一个技术库，用于识别这种学习表面特征的模式何时发生，并对其进行补救。
+- **我们如何确保用户不只是学习问题的表面特征？**《量子国度》中的一个问题问道："谁在使用量子计算机模拟量子场理论方面取得了进展？"，答案是："John Preskill 和他的合作者"。这是整篇文章中唯一一个以"谁"开头的问题，许多用户很快就学会了只从 "谁...... "的模式中识别出来，并鹦鹉学舌地说出了答案，而没有深入参与这个问题。这是记忆系统中一个常见的失败模式，对理解是致命的。我们计划很快进行试验的一个对策是，以多种形式不同但本质相同的表述呈现问题。因此，用户第一次看到的问题是 "谁取得了[*等*]的进展？"；但第二次看到的问题是以填空的方式呈现。"___和他的合作者在使用量子计算机模拟量子场理论方面取得了进展。" 以此类推，问题的多种不同形式，旨在让用户必须始终深入参与问题的含义，而不是其表面的外观。最终，我们希望开发一个技术库，用于识别这种学习表面特征的模式何时发生，并对其进行补救。
 - **How to best help users when they forget the answer to a question?** Suppose a user can’t remember the answer to the question: “Who was the second President of the United States?” Perhaps they think it’s Thomas Jefferson, and are surprised to learn it’s John Adams. In a typical spaced-repetition memory system this would be dealt with by decreasing the time interval until the question is reviewed again. But it may be more effective to follow up with questions designed to help the user understand some of the surrounding context. E.g.: “Who was George Washington’s Vice President?” (A: “John Adams”). Indeed, there could be a whole series of followup questions, all designed to help better encode the answer to the initial question in memory.
-- **当用户忘记问题的答案时，如何最好地帮助他们？** 假设一个用户不记得这个问题的答案："谁是美国的第二任总统？" 也许他们认为是托马斯-杰斐逊，而当得知是约翰-亚当斯时，他们很惊讶。在一个典型的间隔重复记忆系统中，这种情况可以通过缩短再次复习该问题的时间间隔来解决。但是，用旨在帮助用户理解一些相关背景的问题来跟进可能会更有效。例如："谁是乔治-华盛顿的副总统？" 答："约翰-亚当斯"。事实上，可以有一整个系列的后续问题，都是为了帮助更好地在记忆中编码最初问题的答案。
+- **当用户忘记问题的答案时，如何最好地帮助他们？** 假设一个用户不记得这个问题的答案："谁是美国的第二任总统？" 也许他们认为是托马斯-杰斐逊，而当得知是约翰-亚当斯时，他们很惊讶。在一个典型的间隔重复记忆系统中，这种情况可以通过缩短再次复习该问题的时间间隔来解决。但是，用旨在帮助用户理解一些相关背景的问题来跟进可能会更有效。例如："谁是乔治-华盛顿的副总统？" (答："约翰-亚当斯")。事实上，可以有一整个系列的后续问题，都是为了帮助更好地在记忆中编码最初问题的答案。
 - **How to encode stories in the mnemonic medium?** People often find certain ideas most compelling in story form. Here’s a short, fun example: did you know that Steve Jobs actively opposed the development of the App Store in the early days of the iPhone? It was instead championed by another executive at Apple, Scott Forstall. Such a story carries a force not carried by declarative facts alone. It’s one thing to know in the abstract that even the visionaries behind new technologies often fail to see many of their uses. It’s quite another to hear of Steve Jobs arguing with Scott Forstall against what is today a major use of a technology Jobs is credited with inventing. Can the mnemonic medium be used to help people internalize such stories? To do so would likely violate the principle of atomicity, since good stories are rarely atomic (though this particular example comes close). Nonetheless, the benefits of such stories seem well worth violating atomicity, if they can be encoded in the cards effectively.
-- **如何在记忆媒介中对故事进行编码？** 人们常常发现某些想法在故事形式中最有说服力。这里有一个简短而有趣的例子：你知道吗，在iPhone的早期，史蒂夫-乔布斯积极反对开发应用程序商店？相反，它是由苹果公司的另一位高管Scott Forstall倡导的。这样的故事具有陈述性事实所不具备的力量。抽象地知道，即使是新技术背后的远见卓识者也常常看不到它们的许多用途，这是一回事。听到史蒂夫-乔布斯与斯科特-福斯特尔(Scott Forstall)争论，反对乔布斯所发明的技术在今天的主要用途，则是另一回事。记忆媒介可以用来帮助人们内化这些故事吗？这样做可能会违反原子性原则，因为好的故事很少是原子性的(虽然这个特殊的例子很接近)。尽管如此，如果这些故事能够有效地在卡片上编码，那么这些故事的好处似乎很值得违反原子性原则。
+- **如何在记忆媒介中对故事进行编码？** 人们常常发现某些想法在故事形式中最有说服力。这里有一个简短而有趣的例子：你知道吗，在iPhone的早期，史蒂夫-乔布斯积极反对开发应用程序商店？相反，它是由苹果公司的另一位高管 Scott Forstall 倡导的。这样的故事具有陈述性事实所不具备的力量。抽象地知道，即使是新技术背后的远见卓识者也常常看不到它们的许多用途，这是一回事。听到史蒂夫-乔布斯与斯科特-福斯特尔(Scott Forstall)争论，反对乔布斯所发明的技术在今天的主要用途，则是另一回事。记忆媒介可以用来帮助人们内化这些故事吗？这样做可能会违反原子性原则，因为好的故事很少是原子性的(虽然这个特殊的例子很接近)。尽管如此，如果这些故事能够有效地在卡片上编码，那么这些故事的好处似乎很值得违反原子性原则。
 
 
 
@@ -324,7 +324,7 @@ One useful metaphor for thinking about how to improve the mnemonic medium is to 
 
 We said above that it’s a mistake to use the simplistic model “good memory system = spaced repetition”. In fact, while spaced repetition is a helpful way to introduce *Quantum Country*, we certainly shouldn’t pigeonhole the mnemonic medium inside the paradigm of existing SRM systems. Instead, it’s better to go back to first principles, and to ask questions like: what would make *Quantum Country* a good memory system? Are there other powerful principles about memory which we could we build into the system, apart from spaced repetition?
 
-我们在上面说过，使用 "好的记忆系统=间隔重复 "的简单化模式是一个错误。事实上，虽然间隔重复是介绍*量子国度*的一个有用的方法，但我们当然不应该把记忆媒介放进现有的 SRM 系统的范式里。相反，最好是回到第一原则，并提出这样的问题：什么会使*量子国度*成为一个好的记忆系统？除了间隔重复之外，是否还有其他关于记忆的强有力的原则，我们可以将其纳入系统？
+我们在上面说过，使用 "好的记忆系统=间隔重复" 的简单化模式是一个错误。事实上，虽然间隔重复是介绍*量子国度*的一个有用的方法，但我们当然不应该把记忆媒介放进现有的 SRM 系统的范式里。相反，最好是回到第一原则，并提出这样的问题：什么会使*量子国度*成为一个好的记忆系统？除了间隔重复之外，是否还有其他关于记忆的强有力的原则，我们可以将其纳入系统？
 
 In fact, there are ideas about memory very different from spaced repetition, but of comparable power. One such idea is *elaborative encoding*. Roughly speaking, this is the idea that the richer the associations we have to a concept, the better we will remember it. As a consequence, we can improve our memory by enriching that network of associations.
 
@@ -332,14 +332,14 @@ In fact, there are ideas about memory very different from spaced repetition, but
 
 This is in some sense an obvious idea, according well with everyday experience. For instance, it’s part of the reason it’s so much easier to learn new facts in an area we’re already expert in – we quickly form associations to our existing knowledge. But just because the idea is obvious, that doesn’t mean it’s particularly well supported by existing media forms. There’s a lot of low-hanging fruit which we can actively support inside the mnemonic medium. Indeed, several of the suggestions above already implicitly build on the idea of elaborative encoding – principles like “avoid orphan cards” are based on this. Here’s three more suggestions which build on elaborative encoding:
 
-从某种意义上说，这是一个显而易见的想法，与日常经验很吻合。例如，这也是在我们已经是专家的领域里学习新的事实要容易得多的部分原因--我们很快就会对我们现有的知识形成联系。但是，仅仅因为这个想法是显而易见的，这并不意味着它得到了现有媒介形式的特别支持。有很多低垂的果实，我们可以在记忆媒介里面积极支持。事实上，上面的一些建议已经隐含了精心编码的理念--像 "避免孤立卡片" 这样的原则就是基于此。这里还有三条建议是建立在精细编码之上的。
+从某种意义上说，这是一个显而易见的想法，与日常经验很吻合。例如，这也是在我们已经是专家的领域里学习新的事实要容易得多的部分原因--我们很快就会对我们现有的知识形成联系。但是，仅仅因为这个想法是显而易见的，这并不意味着它得到了现有媒介形式的特别支持。有很多低垂的果实，我们可以在记忆媒介里面积极支持。事实上，上面的一些建议已经隐含了精心编码的理念——像 "避免孤立卡片" 这样的原则就是基于此。这里还有三条建议是建立在精细编码之上的：
 
 - **Provide questions and answers in multiple forms:** In 1971, the psychologist Allan Paivio proposed the dual-coding theory, namely, the assertion that verbal and non-verbal information are stored separately in long-term memory. Paivio and others investigated the *picture superiority effect*, demonstrating that pictures and words together are often recalled substantially better than words alone. This suggests, for instance, that the question “Who was George Washington’s Vice President?” may have a higher recall rate if accompanied by a picture of Washington, or if the answer (John Adams) is accompanied by a picture of Adams. For memory systems the dual-coding theory and picture superiority effect suggest many questions and ideas. How much benefit is there in presenting questions and answer in multiple forms? Perhaps even with multiple pictures, or in audio or video (perhaps with multiple speakers of different genders, different accents, *etc*), or in computer code? Perhaps in a form that demands some form of interaction? And in each case: what works best?
-- **以多种形式提供问题和答案：** 1971年，心理学家艾伦-派维奥提出了双重编码理论，即主张语言和非语言信息分别储存在长期记忆中。帕维奥和其他人研究了*图片优势效应*，证明图片和文字在一起的记忆往往比单独的文字要好很多。这表明，例如，"谁是乔治-华盛顿的副总统？"这个问题如果伴随着华盛顿的图片，或者如果答案(约翰-亚当斯)伴随着亚当斯的图片，可能会有更高的回忆率。对于记忆系统来说，双重编码理论和图片优势效应提出了许多问题和想法。以多种形式呈现问题和答案的好处有多大？也许甚至用多种图片，或用音频或视频(也许用不同性别、不同口音的多个发言人，*等等*)，或用计算机代码？也许以一种需要某种形式的互动的形式？而在每一种情况下：什么是最有效的？
+- **以多种形式提供问题和答案：** 1971 年，心理学家艾伦-派维奥提出了双重编码理论，即主张语言和非语言信息分别储存在长期记忆中。帕维奥和其他人研究了*图片优势效应*，证明图片和文字在一起的记忆往往比单独的文字要好很多。这表明，例如，"谁是乔治-华盛顿的副总统？"这个问题如果伴随着华盛顿的图片，或者如果答案(约翰-亚当斯)伴随着亚当斯的图片，可能会有更高的回忆率。对于记忆系统来说，双重编码理论和图片优势效应提出了许多问题和想法。以多种形式呈现问题和答案的好处有多大？也许甚至用多种图片，或用音频或视频(也许用不同性别、不同口音的多个发言人，*等等*)，或用计算机代码？也许以一种需要某种形式的互动的形式？而在每一种情况下：什么是最有效的？
 - **Vary the context:** In 1978, the psychologists Steven Smith, Arthur Glenberg, and Robert Bjork[^17] reported several experiments studying the effect of place on human memory. In one of their experiments, they found that studying material in two different places, instead of twice in the same place, provided a 40% improvement in later recall. This is part of a broader pattern of experiments showing that varying the context of review promotes memory. We can use memory systems to support things like: changing the location of review; changing the time of day of review; changing the background sound, or lack thereof, while reviewing. In each case, experiments have been done suggesting an impact on recall. It’s not necessarily clear how robust the results are, or how reproducible – it’s possible some (or all) are the results of other effects, uncontrolled in the original experiment. Still, it seems worth building systems to test and (if possible) improve on these results.
-- **改变背景：** 1978年，心理学家史蒂文-史密斯、阿瑟-格伦伯格和罗伯特-比约克报告了几个研究地点对人类记忆影响的实验。在其中一个实验中，他们发现在两个不同的地方学习材料，而不是在同一个地方学习两次，可以使后来的回忆提高40%。这是一个更广泛的实验模式的一部分，显示不同的复习环境会促进记忆。我们可以使用记忆系统来支持以下事情：改变复习的地点；改变复习的时间；改变复习时的背景声音，或者没有背景声音。在每一种情况下，都有实验表明对回忆有影响。不一定清楚这些结果有多强大，或有多大的可重复性--可能有些(或全部)是其他影响的结果，在最初的实验中没有被控制。不过，似乎还是值得建立系统来测试和(如果可能的话)改进这些结果。
+- **改变背景：** 1978 年，心理学家史蒂文-史密斯、阿瑟-格伦伯格和罗伯特-比约克[^17] 报告了几个研究地点对人类记忆影响的实验。在其中一个实验中，他们发现在两个不同的地方学习材料，而不是在同一个地方学习两次，可以使后来的回忆提高 40%。这是一个更广泛的实验模式的一部分，显示不同的复习环境会促进记忆。我们可以使用记忆系统来支持以下事情：改变复习的地点；改变复习的时间；改变复习时的背景声音，或者没有背景声音。在每一种情况下，都有实验表明对回忆有影响。不一定清楚这些结果有多强大，或有多大的可重复性--可能有些(或全部)是其他影响的结果，在最初的实验中没有被控制。不过，似乎还是值得建立系统来测试和(如果可能的话)改进这些结果。
 - **How do the cards interact with one another? What is the ideal network structure of knowledge?** This is a very complicated and somewhat subtle set of questions. Let’s give a simple example to illustrate the idea. We’ve presented the cards in the mnemonic medium as though they are standalone entities. But there are connections between the cards. Suppose you have cards: “Who was George Washington’s Vice President?” (Answer: “John Adams”, with a picture of Adams); “What did John Adams look like?” (Answer: a picture of Adams); perhaps a question involving a sketch of Adams and Washington together at some key moment; and so on. Now, this set of cards forms a network of interrelated cards. And you can use a memory system like *Quantum Country* to study that network. What happens to people’s observed recall if you remove a card? Are there crucial lynchpin cards? Are there particularly effective network structures? Particularly effective types of relationship between cards? Crucially: are there general principles we can identify about finding the deepest, most powerful ways of representing knowledge in this system?
-- **卡片之间是如何互动的？理想的知识网络结构是什么？** 这是一组非常复杂且有些微妙的问题。让我们举一个简单的例子来说明这个想法。我们在记忆媒介中展示的卡片，好像它们是独立的实体。但这些卡片之间是有联系的。假设你有一些卡片。"谁是乔治-华盛顿的副总统？" 答案是："约翰-亚当斯"，并附有亚当斯的照片；"约翰-亚当斯长什么样子？" 答案：亚当斯的照片；也许还有一个问题涉及亚当斯和华盛顿在某个关键时刻的素描；等等。现在，这套卡片形成了一个相互关联的卡片网络。而你可以使用像*量子国度*这样的记忆系统来研究这个网络。如果你去掉一张卡片，人们的观察回忆会发生什么变化？是否有关键的林肯牌？是否有特别有效的网络结构？卡片之间有特别有效的关系类型吗？最重要的是：对于在这个系统中寻找最深层、最强大的知识表达方式，我们是否有一般的原则可以确定？
+- **卡片之间是如何互动的？理想的知识网络结构是什么？** 这是一组非常复杂且有些微妙的问题。让我们举一个简单的例子来说明这个想法。我们在记忆媒介中展示的卡片，好像它们是独立的实体。但这些卡片之间是有联系的。假设你有一些卡片。"谁是乔治-华盛顿的副总统？" (答："约翰-亚当斯"，并附有亚当斯的照片)；"约翰-亚当斯长什么样子？" (答：亚当斯的照片)；也许还有一个问题涉及亚当斯和华盛顿在某个关键时刻的素描；等等。现在，这套卡片形成了一个相互关联的卡片网络。而你可以使用像*量子国度*这样的记忆系统来研究这个网络。如果你去掉一张卡片，人们的观察回忆会发生什么变化？是否有关键的林肯牌？是否有特别有效的网络结构？卡片之间有特别有效的关系类型吗？最重要的是：对于在这个系统中寻找最深层、最强大的知识表达方式，我们是否有一般的原则可以确定？
 
 By now it’s obvious that the prototype mnemonic medium we’ve developed is the tip of a much larger iceberg. What’s more, the suggestions we’ve made and questions we’ve asked here are also merely a beginning, to give you the flavor of what is possible.
 
@@ -351,7 +351,7 @@ By now it’s obvious that the prototype mnemonic medium we’ve developed is th
 
 When we discuss memory systems with people, many immediately respond that we should look into mnemonic techniques. This is an approach to memory systems very different to *Quantum Country*, Duolingo, Anki, and the other systems we’ve discussed. You’re perhaps familiar with simple mnemonic techniques from school. One common form is tricks such as remembering the colors of the rainbow as the name Roy G. Biv (red, orange, yellow, green, *etc*). Or remembering the periodic table of elements using a [song](https://www.youtube.com/watch?v=VgVQKCcfwnU)[^18].
 
-当我们与人讨论记忆系统时，许多人立即回应说我们应该研究记忆技巧。这是一种与*Quantum Country*、Duolingo、Anki以及我们讨论过的其他系统非常不同的记忆系统方法。你也许对学校里的简单记忆技巧很熟悉。一种常见的形式是把彩虹的颜色记成 Roy G. Biv (red, orange, yellow, green, *etc*))。或者用[歌曲](https://www.youtube.com/watch?v=VgVQKCcfwnU)来记住元素周期表。
+当我们与人讨论记忆系统时，许多人立即回应说我们应该研究记忆技巧。这是一种与*Quantum Country*、Duolingo、Anki以及我们讨论过的其他系统非常不同的记忆系统方法。你也许对学校里的简单记忆技巧很熟悉。一种常见的形式是把彩虹的颜色记成 Roy G. Biv (red, orange, yellow, green, *etc*))。或者用[歌曲](https://www.youtube.com/watch?v=VgVQKCcfwnU)[^18]来记住元素周期表。
 
 A more complex variation is visualization techniques such as the *method of loci*. Suppose you want to remember your shopping list. To do so using the method of loci, you visualize yourself in some familiar location – say, your childhood home. And then you visualize yourself walking from room to room, placing an item from your shopping list prominently in each room. When you go shopping, you can recall the list by imagining yourself walking through the house – your so-called *memory palace* – and looking at the items in each room.
 
@@ -629,11 +629,11 @@ Here’s a short sketch of one approach to doing thisThe narrator’s script in 
 
 这里有一个简短的草图，介绍了这样做的一种方法。这个草图中的叙述者的脚本改编自*宇宙*(1984)，第4集：
 
-![image-20210517203113497](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203113497.png)
+![Image](https://pic4.zhimg.com/80/v2-3a7edacd0a5d0c02b1e8b8e520d907af.png)
 
-![image-20210517203135790](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203135790.png)
+![Image](https://pic4.zhimg.com/80/v2-7a1884be7223c7a002ea2b0c0a93168d.png)
 
-![image-20210517203310414](/Users/jarrettye/Documents/Writing/supermemo.guru-cn/Essays/我们如何才能开发出变革性的思想工具？.assets/image-20210517203310414.png)
+![Image](https://pic4.zhimg.com/80/v2-371288d0a1824ce0e4cedd96c5e23497.png)
 
 It seems likely that the rhythm of mnemonic videos would be quite different to mnemonic essays. In particularly, the frequency and density of questions would be lower than in the mnemonic medium, and it would be necessary to test different beats and cadences to ensure a good balance of emotional and intellectual experience. Even high-affect video typically has quieter moments; it achieves the high affect in part by contrast to the lower-intensity moments. Think about the way a good action movie or thriller needs lulls; if it’s too high-intensity all the time, eventually our emotional response is dulled. We could design mnemonic video so the questions help fill this lower-intensity emotional beat.
 
@@ -1078,7 +1078,7 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 [^3]: 还是Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989).
 [^Mass Point 1]: 这一句语序有点怪, 但我想不出更好的
 [^4]:An account may be found in Iverson’s Turing Award lecture, [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). Incidentally, even Iverson is really describing a medium for thought, the APL programming language, not a narrow tool. 可以从Iverson在Turing奖获奖演讲 [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). 顺便说一下, Iverson这里描述的实际上是一种思考媒介APL语言, 而不是狭义的工具. 
-[^Mass Point 2 ]:这一段后面部分翻得不是很好, 甚至可能有理解错误, 原文如下To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it. 
+[^Mass Point 2]:这一段后面部分翻得不是很好, 甚至可能有理解错误, 原文如下To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it. 
 [^Mass Point 3]: 这里把idea翻译为想法有点不太合中文的表达习惯, 因为这里的idea明显指的是一些具象化的概念与公式, 但中文里想法"一词多指一些形而上的东西. 请校对时再斟酌一下
 [^Mass Point 4]: *mnemonic medium*直译有点莫名其妙, 翻成"带有辅助记忆功能的媒介"又太拖沓. 定稿的时候可以再讨论一下
 [^5]: For more on this argument, see Andy Matuschak, [Why books don’t work](https://andymatuschak.org/books/) (2019). 关于这个问题的更多讨论, 见Andy Matuschak, [Why books don’t work](https://andymatuschak.org/books/) (2019).
@@ -1092,7 +1092,8 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 [^14]: Michael Nielsen, [Augmenting Long-term Memory](https://augmentingcognition.com/ltm.html) (2018), and Michael Nielsen, [Using spaced repetition systems to see through a piece of mathematics](http://cognitivemedium.com/srs-mathematics) (2019).迈克尔-尼尔森，[增强长期记忆](https://augmentingcognition.com/ltm.html) (2018)，以及迈克尔-尼尔森，[利用间隔重复系统看穿数学](http://cognitivemedium.com/srs-mathematics) (2019)。
 [^15]: **Note added December 9, 2019: This claim appears to be based on an error in our data analysis, and is now retracted. We’ve left the text in for historic reasons, but we no longer believe the claim. 2019年12月9日添加的注释：这一说法似乎是基于我们的数据分析中的一个错误，现在被收回。出于历史原因，我们保留了这段文字，但我们不再相信这一说法。**
 [^16]:Michael Nielsen, [Augmenting Long-Term Memory](https://augmentingcognition.com/ltm.html) (2018).迈克尔-尼尔森，[增强长期记忆](https://augmentingcognition.com/ltm.html) (2018) 
-[^17]:Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [Environmental context and human memory](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978).Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [环境背景和人类记忆](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978)。 [^18]:An enjoyable extended introduction to such techniques may be found in Joshua Foer’s book “Moonwalking with Einstein” (2012).在约书亚-福尔的《与爱因斯坦月球漫步》(2012年)一书中，可以找到对这种技巧的愉快的扩展介绍。 
+[^17]:Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [Environmental context and human memory](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978).Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [环境背景和人类记忆](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978)。
+[^18]:An enjoyable extended introduction to such techniques may be found in Joshua Foer’s book “Moonwalking with Einstein” (2012).在约书亚-福尔的《与爱因斯坦月球漫步》(2012年)一书中，可以找到对这种技巧的愉快的扩展介绍。 
 [^19]:A small minority of the population does not possess a mind’s eye, and so cannot mentally visualize. This condition is known as [aphantasia](https://en.wikipedia.org/wiki/Aphantasia). One of us [asked on Twitter](https://twitter.com/michael_nielsen/status/1144281873197096961) if any aphantasics had tried using the method of loci, and if so how well it worked for them. The replies were remarkably heterogeneous (and striking), but most said such mnemonic techniques did not work for them. This deserves further study.少数人不具备精神之眼，因此不能在精神上进行视觉化。这种情况被称为[象皮症](https://en.wikipedia.org/wiki/Aphantasia)。我们中的一个人[在Twitter上问](https://twitter.com/michael_nielsen/status/1144281873197096961)，是否有象皮症患者尝试过使用位置法，如果有，对他们来说效果如何。答复是非常不同的(和引人注目的)，但大多数人说这种记忆技巧对他们不起作用。这值得进一步研究。 
 [^20]:The last four paragraphs are adapted from [Augmenting Long-term Memory](http://augmentingcognition.com/ltm.html) (2018).最后四段改编自[增强长期记忆](http://augmentingcognition.com/ltm.html) (2018)。 
 [^21]:The last two paragraphs are adapted from our forthcoming mnemonic essay: Andy Matuschak and Michael Nielsen, [How quantum teleportation works](https://quantum.country/teleportation) (2019).最后两段改编自我们即将发表的助记文章。安迪-马图沙克和迈克尔-尼尔森，[量子传送如何运作](https://quantum.country/teleportation) (2019)。 
