--- a/Essays/教育同理心.md
+++ b/Essays/教育同理心.md
@@ -1,30 +1,32 @@
+#! https://zhuanlan.zhihu.com/p/379665183
+![Image](https://pic4.zhimg.com/80/v2-b5ec7fd8cf05f9c2c79af46d2d679504.png)
 # Educational empathy 教育同理心
 
 ## Definition 定义
 
 Educational empathy is the ability to vicariously sense the educational experiences of other people (esp. children), and prior self.
 
-教育同理心是一种能够间接感知他人（特别是儿童）和过去自我的教育经历的能力。
+教育同理心是一种间接感知他人（特别是儿童）和过去自我的教育经历的能力。
 
 ## Mechanism 机制
 
 **Educational empathy** cannot capitalize on the [prior knowledge](https://supermemo.guru/wiki/Prior_knowledge) of an individual we empathize with. We [do not sit in his head](https://supermemo.guru/wiki/Teacher_Tom:_It_is_hard_to_understand_play) to know what he knows, and how his [concept network](https://supermemo.guru/wiki/Concept_network) is organized semantically.
 
-**教育同理心**不能利用我们所同情的个人的[先备知识](https://supermemo.guru/wiki/Prior_knowledge)。我们[没法坐在他的脑子里](https://supermemo.guru/wiki/Teacher_Tom:_It_is_hard_to_understand_play)知道他知道什么，以及他的[概念网络](https://supermemo.guru/wiki/Concept_network)是如何在语义上组织的。
+**教育同理心**不能把握我们所同情的个体的[先备知识](https://supermemo.guru/wiki/Prior_knowledge)。我们[没法坐在他的脑子里](https://supermemo.guru/wiki/Teacher_Tom:_It_is_hard_to_understand_play)知道他知道什么，以及他的[概念网络](https://supermemo.guru/wiki/Concept_network)是如何在语义上组织的。
 
 This is why **educational empathy** has very little to do with actual empathy, and more to do with understanding of the learning process. Only by understanding how the brain works can we effectively predict emotional states and educational outcomes in the wake of learning.
 
-这就是为什么**教育同理心**与实际的同理心关系不大，而更多的是与对学习过程的理解有关。只有通过了解大脑的工作原理，我们才能有效地预测学习后的情绪状态和教育成果。
+这就是为什么**教育同理心**与实际的同理心关系不大，而与对学习过程的理解更有关。只有通过了解大脑的工作原理，我们才能有效地预测学习后的情绪状态和教育成果。
 
 Deficits in **educational empathy** lay at the foundation of the [Prussian model of schooling](https://supermemo.guru/wiki/Prussian_model_of_schooling). Adults project their own educational experiences on new generations and design an educational system that is increasingly harmful. The increase in the harm comes from the dissonance between learning opportunities exposed to young people and the reality of learning at school. This dissonance leads to an increase in legal, psychological and even pharmaceutical measures aimed at keeping children at school. See: [Adults are incapable of empathy in education](https://supermemo.guru/wiki/Adults_are_incapable_of_empathy_in_education)
 
-在**教育同理心**方面的缺陷是[普鲁士学校教育模式](https://supermemo.guru/wiki/Prussian_model_of_schooling)的基础。成年人将自己的教育经验投射到新的一代人身上，设计出一个越来越有害的教育系统。危害的增加来自于年轻人接触到的学习机会与学校学习的现实之间的不协调。这种不协调导致了旨在将儿童留在学校的法律、心理、甚至药物措施的增加。见：[成年人在教育方面没有能力产生共鸣](https://supermemo.guru/wiki/Adults_are_incapable_of_empathy_in_education)
+在**教育同理心**方面的缺陷是[普鲁士学校教育模式](https://supermemo.guru/wiki/Prussian_model_of_schooling)的基础。成年人将自己的教育经历投射到新的一代人身上，设计出一个越来越有害的教育系统。危害的增加来自于年轻人接触到的学习机会与学校学习的现实之间的不协调。这种不协调导致了旨在将儿童留在学校的法律、心理、甚至药物措施的增加。见：[成年人在教育方面没有能力产生同情](https://supermemo.guru/wiki/Adults_are_incapable_of_empathy_in_education)
 
 ## Prior knowledge 先备知识
 
 The importance of [prior knowledge](https://supermemo.guru/wiki/Prior_knowledge) and [semantic framework](https://supermemo.guru/wiki/Semantic_framework) in learning can be illustrated with the [Jigsaw puzzle metaphor](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor). The first step towards **educational empathy** is the understanding of the [Fundamental Law of Learning](https://supermemo.guru/wiki/Fundamental_Law_of_Learning).
 
-[先备知识](https://supermemo.guru/wiki/Prior_knowledge)和[语义框架](https://supermemo.guru/wiki/Semantic_framework)在学习中的重要性可以用[拼图比喻](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor)来说明。迈向**教育同理心**的第一步是理解[学习的基本法则](https://supermemo.guru/wiki/Fundamental_Law_of_Learning)。
+[先备知识](https://supermemo.guru/wiki/Prior_knowledge)和[语义框架](https://supermemo.guru/wiki/Semantic_framework)在学习中的重要性可以用[拼图比喻](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor)来说明。迈向**教育同理心**的第一步是理解[学习的基本规律](https://supermemo.guru/wiki/Fundamental_Law_of_Learning)。
 
 As we have no access to a complete semantic structure of knowledge in a student's brain, only the student herself can make judgement on the perceived [value of knowledge](https://supermemo.guru/wiki/Knowledge_valuation)
 
@@ -42,7 +44,7 @@ Forcing children to learn things they do not want to learn is a prime example an
 
 Deficits in **educational empathy** are less about the deficits in empathy, and they are more about the deficits in knowledge. However, ignorance is not the only cause of deficits. [Curse of knowledge](https://supermemo.guru/wiki/Curse_of_knowledge) has its own contribution to empathy deficits. The bigger the knowledge of the individual, the harder it is to empathize with the perceptions of a less knowledgeable individual. Incidentally, [curse of knowledge](https://supermemo.guru/wiki/Curse_of_knowledge) can be used to explain why decades of [incremental reading](https://supermemo.guru/wiki/Incremental_reading) do not significantly contribute to a sense of being more knowledgeable. Not only is it hard to empathize with a child. It is also hard to empathize with one's own brain from the past.
 
-**教育同理心**的缺陷与其说是同理心方面的缺陷，不如说是知识方面的缺陷。然而，无知并不是造成缺陷的唯一原因。[知识的诅咒](https://supermemo.guru/wiki/Curse_of_knowledge)对缺陷也有自己的贡献。个人的知识越多，就越难对知识少的人的看法产生共鸣。顺便说一下，[知识的诅咒](https://supermemo.guru/wiki/Curse_of_knowledge)可以用来解释为什么几十年的[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)并没有明显地促进人们对自己知识的感觉。不仅是很难同情一个孩子。也很难与自己过去的大脑产生共鸣。
+**教育同理心**的缺陷与其说是同理心方面的缺陷，不如说是知识方面的缺陷。然而，无知并不是造成缺陷的唯一原因。[知识的诅咒](https://supermemo.guru/wiki/Curse_of_knowledge)对缺陷也有自己的贡献。个人的知识越多，就越难对知识少的人的看法产生共鸣。顺便说一下，[知识的诅咒](https://supermemo.guru/wiki/Curse_of_knowledge)可以用来解释为什么几十年的[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)并没有明显地促进人们对自己知识的感觉。不仅很难与一个孩子共鸣，也很难与自己过去的大脑产生共鸣。
 
 ## Examples 例子
 
@@ -51,15 +53,15 @@ Deficits in **educational empathy** are less about the deficits in empathy, and 
 [SuperMemo Guru](https://supermemo.guru/wiki/SuperMemo_Guru) 提供了几十个例子，在这些例子中，成人可以通过了解孩子的学习认知来锻炼他们的**教育同理心**：
 
 - Can you memorize this word in Chiruhitai: циษา关ภา于तत्स中文अर्ध维基фу百д科? See: [Semantic aspects of childhood amnesia](https://supermemo.guru/wiki/Semantic_aspects_of_childhood_amnesia)
-- 你能记住Chiruhitai的这个词吗：циษา关ภา于त्स中文अर्ध维基фу百д科？见：[儿童失忆症的语义问题](https://supermemo.guru/wiki/Semantic_aspects_of_childhood_amnesia)
+- 你能记住这个 Chiruhitai 词——циษา关ภา于त्स中文अर्ध维基фу百д科——吗？见：[儿童失忆症的语义问题](https://supermemo.guru/wiki/Semantic_aspects_of_childhood_amnesia)
 - the story of Franz in [Unpleasant learning at school](https://supermemo.guru/wiki/Unpleasant_learning_at_school) explain the harm of [asemantic learning](https://supermemo.guru/wiki/Asemantic_learning)
-- Franz 的故事在[Unpleasant learning at school](https://supermemo.guru/wiki/Unpleasant_learning_at_school)中解释了[无语义学习](https://supermemo.guru/wiki/Asemantic_learning)的危害
+- Franz 的故事在[在学校不快乐的学习l](https://supermemo.guru/wiki/Unpleasant_learning_at_school)中解释了[无语义学习](https://supermemo.guru/wiki/Asemantic_learning)的危害
 - see the story of cesario Pizzorato in [Futility of schooling](https://supermemo.guru/wiki/Futility_of_schooling) to understand the role of the [semantic framework](https://supermemo.guru/wiki/Semantic_framework)
 - 请参阅[学校教育的徒劳](https://supermemo.guru/wiki/Futility_of_schooling)中 ceario Pizzorato 的故事，了解[语义框架](https://supermemo.guru/wiki/Semantic_framework)的作用
 - minor changes in context result in major changes in the ability to remember: [How school turns off memory](https://supermemo.guru/wiki/How_school_turns_off_memory)
 - 语境的微小变化会导致记忆能力的重大变化：[学校如何关闭记忆](https://supermemo.guru/wiki/How_school_turns_off_memory)
 - memorizing ten-day periods in [Semantic learning](https://supermemo.guru/wiki/Semantic_learning)
-- 在[语义学习](https://supermemo.guru/wiki/Semantic_learning)中记忆十天的时间。
+- 在[语义学习](https://supermemo.guru/wiki/Semantic_learning)中记忆十天的时间
 - [educational dyslexia](https://supermemo.guru/wiki/Educational_dyslexia) shows how teaching can cause harm that lasts a lifetime
 - [教育性阅读障碍](https://supermemo.guru/wiki/Educational_dyslexia)显示了教学如何造成持续一生的伤害
 - [toxic memory](https://supermemo.guru/wiki/Toxic_memory): problem with memorizing months, multiplication table, or distinguishing left from right
@@ -71,19 +73,19 @@ Deficits in **educational empathy** are less about the deficits in empathy, and 
 - games are superior to teachers: [Videogames are better than teachers](https://supermemo.guru/wiki/Videogames_are_better_than_teachers)
 - 游戏优于教师：[视频游戏比老师好](https://supermemo.guru/wiki/Videogames_are_better_than_teachers)
 - role of spaces in reading: [Reading wars are over: Whole language vs. Phonics](https://supermemo.guru/wiki/Reading_wars_are_over:_Whole_language_vs._Phonics)
-- 空间在阅读中的作用：[阅读战争结束了：全语言与语音学](https://supermemo.guru/wiki/Reading_wars_are_over:_Whole_language_vs._Phonics)
+- 空间在阅读中的作用：[阅读战争结束了：整体语言法与自然拼读法](https://supermemo.guru/wiki/Reading_wars_are_over:_Whole_language_vs._Phonics)
 - [Precocity paradox](https://supermemo.guru/wiki/Precocity_paradox) makes it hard to understand the value of "delays" in development
 - [早熟悖论](https://supermemo.guru/wiki/Precocity_paradox)使人难以理解发展中 "延迟" 的价值
 - [Feedback in learning](https://supermemo.guru/wiki/Feedback_in_learning) helps understand why a school bench is a horrible invention
 - [学习中的反馈](https://supermemo.guru/wiki/Feedback_in_learning)有助于理解为什么学校的长椅是一个可怕的发明
 - [Education counteracts evolution](https://supermemo.guru/wiki/Education_counteracts_evolution) explains why present schooling methods stifle learning and exploration
-- [教育与进化相抵触](https://supermemo.guru/wiki/Education_counteracts_evolution)解释了为什么目前的学校教育方法会扼杀学习和探索
+- [教育抵消进化](https://supermemo.guru/wiki/Education_counteracts_evolution)解释了为什么目前的学校教育方法会扼杀学习和探索
 - [Brain is a perfectly adaptable device](https://supermemo.guru/wiki/Brain_is_a_perfectly_adaptable_device) helps understand the value of freedom in learning
 - [大脑是一个完美的适应性设备](https://supermemo.guru/wiki/Brain_is_a_perfectly_adaptable_device)有助于理解学习中自由的价值
 - [Optimality of the learn drive](https://supermemo.guru/wiki/Optimality_of_the_learn_drive) is poorly understood and underlies the power of [free learning](https://supermemo.guru/wiki/Free_learning)
-- 对[学习动力的优化](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)的理解不深，它是[自由学习](https://supermemo.guru/wiki/Free_learning)的力量的基础
+- 对[学习内驱力的优化](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)的理解不深，它是[自由学习](https://supermemo.guru/wiki/Free_learning)的力量的基础
 - Missile metaphor helps understand why [School undermines intelligence](https://supermemo.guru/wiki/School_undermines_intelligence)
-- 导弹隐喻有助于理解为什么[学校破坏了智力](https://supermemo.guru/wiki/School_undermines_intelligence)
+- 导弹比喻有助于理解为什么[学校破坏了智力](https://supermemo.guru/wiki/School_undermines_intelligence)
 - [Old soup metaphor](https://supermemo.guru/wiki/Old_soup_metaphor) explains why it is easy to project from one child to another
 - [老汤比喻](https://supermemo.guru/wiki/Old_soup_metaphor)解释了为什么很容易从一个孩子投射到另一个孩子身上
 - Educational empathy is failing most visibly in [special needs education](https://supermemo.guru/wiki/Problems_with_special-needs_education)
